// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot with books 1`] = `
<div
  className="bookshelf"
>
  <h2
    className="bookshelf-title"
  >
    Bookshelf Name
  </h2>
  <div
    className="bookshelf-books"
  >
    <ol
      className="books-grid"
    >
      <li
        key="1"
      >
        <Book
          onChangeBookCategory={[Function]}
          title="Book A"
        />
      </li>
      <li
        key="2"
      >
        <Book
          onChangeBookCategory={[Function]}
          title="Book B"
        />
      </li>
    </ol>
  </div>
</div>
`;

exports[`snapshot without books 1`] = `
<div
  className="bookshelf"
>
  <h2
    className="bookshelf-title"
  >
    Bookshelf Name
  </h2>
  <div
    className="bookshelf-books"
  >
    <ol
      className="books-grid"
    />
  </div>
</div>
`;
